--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
-#actions {
+.menu {
 	width: 200px;
 	background-color: #CCCC00;
 	padding:10px;
 }
 
-#actions ul {
+.menu ul {
 	margin: 0;
 	padding: 0;
 }
 
-#actions ul li {
+.menu ul li {
 	list-style: none;
 	padding: 5px;
 }
@@ -20,4 +20,8 @@
 
 .hidden {
 	display: none;
+}
+
+.off {
+	opacity: 0.5;
 }
