Agrega un canvas exclusivo para los personajes. Agrega animación. El comando de ataque reduce el hp del blanco.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+#isoCanvases {
+	position:relative;
+	width: 600px;
+	height: 300px;
+	float: right;
+}
+
+#isoCanvases canvas {
+	position:absolute;
+	top:0;
+	left:0;
+}
+
 .menu {
 	width: 200px;
 	background-color: #CCCC00;
