--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,71 @@
 	left:0;
 }
 
+#cards {
+	position: absolute;
+	top: 0;
+	left: 263px;
+	width: 614px;
+}
+
+.card {
+	width: 280px;
+	background-color: rgba(0, 0, 0, 0.5);
+	float: left;
+	padding: 10px;
+}
+
+.portrait {
+	width: 120px;
+	height:120px;
+	float:left;
+	background-image: url(../img/sprite_01.png);
+}
+
+.cardInfo {
+	float: right;
+	padding-left: 10px;
+	width: 150px;
+}
+
+.cardInfo span {
+	float:left;
+}
+
+.barName, .number, .cardName {
+	clear:left;
+	float:left;
+}
+
+.barCont {
+	height:10px;
+	width: 100px;
+	background-color: black;
+	float:left;
+	margin: 3px 0 0 5px;
+}
+
+.bar {
+	width:100%;
+	height:100%;
+}
+
+.hp {
+	background-color: red;
+}
+
+.ap {
+	background-color: blue;
+}
+
+.ct {
+	background-color: yellow;
+}
+
+.hide {
+	margin-top: -150px;
+}
+
 .menu {
 	width: 200px;
 	background-color: #CCCC00;
