--- a/css/style.css
+++ b/css/style.css
@@ -126,12 +126,14 @@
 
 #damageCont {
 	position:absolute;
-	top:100px;
-	left:70%;
+	top:30px;
+	left:77%;
 	font-weight:bold;
 	width:50px;
 	height:30px;
 	overflow:hidden;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: black;
 }
 
 #damageCont span{
